# delta2

./: .gitignore  Dockerfile  Makefile  README.md  delta.py  pyproject.toml  requirements.txt
cd_naissance_deces/: get_data.py  naissance_deces.py
cd_naissance_deces/data/1/: jcwg_age_naissance20.pkl  jcwg_date_deces19.pkl  (+4 more)
cdn_naissance_deces/: README  get_data.py  naissance_deces.py  transform_data.py
data/: ALIRE
fdc_deces/: deces.py
fdc_deces/data/: get_data_deces.ipy  morts_par_jour-1970-1979.pkl  morts_par_jour-1980-1989.pkl  morts_par_jour-1990-1999.pkl  morts_par_jour-2000-2009.pkl  morts_par_jour-2010-2019.pkl  morts_par_jour-2020-2022.pkl  morts_par_jour-2020-2023.pkl
mor_map/: mortality.py  prepare_data.py
mor_map/assets/: style.css
mor_map/data/: Untitled.ipynb  annual-number-of-deaths-by-cause.csv  dataset.csv  second.csv
ndf_naissance_deces/: get_data.py  naissance_deces.py  transform_data.py
ndf_naissance_deces/data/: age_deces18.pkl  age_deces19.pkl  age_deces20.pkl  age_naissance18.pkl  age_naissance19.pkl  age_naissance20.pkl  date_deces18.pkl  date_deces20.pkl  date_naissance18.pkl  departements.geojson  departements.pkl  tudom18.pkl  tudom19.pkl  tudom20.pkl
nrj_energies/: Prix énergie.ipynb  energies.py  energies.py.old
nrj_energies/data/: energies.pkl  pegase_import_petrole.csv  pegase_prix_bois_particulier.csv  pegase_prix_petrole_particulier.csv  prix_reglemente_electricite.csv
wfr_fertilite_revenus/: .test.py.swp  Untitled.ipynb  get_data.ipy  main.py  test.py
wfr_fertilite_revenus/data/: iso-3166.csv  subWDIdata.pkl
(+8 files in other folders)
