[tool.poetry]
name = "delta2"
version = "0.1.0"
description = ""
authors = ["Olivier Ricou <ricou@lrde.epita.fr>"]

[tool.poetry.dependencies]
python = "~3.9.0"
plotly = "^5.3"
dash = "^2.0.0"
numpy = "^1.20"
xarray = "^0.20.1"
pandas = "^1.3.4"
pandas-datareader = "^0.10.0"
beautifulsoup4 = "^4.10.0"
lxml = "^4.6.4"
openpyxl = "^3.0.9"
xlrd = "^2.0.1"
imageio = "^2.10.5"
seaborn = "^0.11.2"
statsmodels = "^0.13"
line_profiler = "^3.5"
gunicorn = "^20.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
